--- a/index.html
+++ b/index.html
@@ -131,10 +131,13 @@
 <!-- ✅ Підключення Supabase -->
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 <script>
-  // 🔗 Створюємо клієнт Supabase
+  // 🔗 Створюємо клієнт Supabase (ОДИН раз глобально)
   const supabaseUrl = "https://zerlqvbmqszomlondlte.supabase.co";
   const supabaseKey = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InplcmxxdmJtcXN6b21sb25kbHRlIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTUzMzg3NzQsImV4cCI6MjA3MDkxNDc3NH0.8wUBYIeQRC6KVp6vdzv0oqofIf4PeZyzbV5GcD0vxTE";
-  const supabase = window.supabase.createClient(supabaseUrl, supabaseKey);
+
+  // ❗ Важливо: не оголошуємо const supabase, бо його може оголошувати auth.js
+  window.supabaseClient =
+    window.supabaseClient || window.supabase.createClient(supabaseUrl, supabaseKey);
 </script>
 <script>
 async function loadLatestFilms(page = 1) {
@@ -148,7 +151,7 @@ async function loadLatestFilms(page = 1) {
 
   for (const t of filmTypes) {
     try {
-      const { data, error } = await supabase
+      const { data, error } = await window.supabaseClient
         .from("films_site")
         .select("id, title, poster, type, genre, year, imdb, pro_access")
         .eq("type", t)
@@ -300,7 +303,7 @@ async function loadLatestSeries() {
   if (!container) return;
   container.innerHTML = "<p style='color:#aaa;'>Завантаження...</p>";
 
-  const { data, error } = await supabase
+  const { data, error } = await window.supabaseClient
     .from("films_site")
     .select("title, poster, id, type, season, episode")
     .eq("type", "Серіал")
@@ -349,7 +352,7 @@ async function loadLatestSeries() {
     if (!slider) return;
     slider.innerHTML = "<p style='color:#aaa;'>Завантаження...</p>";
 
-    const { data, error } = await supabase
+    const { data, error } = await window.supabaseClient
       .from("films_site")
       .select("*")
       .ilike("top", "%топ%")
@@ -399,7 +402,7 @@ async function loadDynamicSidebar() {
 
   // 🎬 Актуальні серіали
   try {
-    const { data: series, error: serErr } = await supabase
+    const { data: series, error: serErr } = await window.supabaseClient
       .from("films_site")
       .select("id, title, poster, type")
       .eq("type", "Серіал");
@@ -431,7 +434,7 @@ async function loadDynamicSidebar() {
 
 // 🎞 Актуальні фільми (без повторів назв)
 try {
-  const { data: films, error: filmErr } = await supabase
+  const { data: films, error: filmErr } = await window.supabaseClient
     .from("films_site")
     .select("id, title, poster, type")
     .eq("type", "Фільм");
@@ -468,7 +471,7 @@ try {
 
   // 🧸 Мультсеріали
   try {
-    const { data: cartoons, error: cartErr } = await supabase
+    const { data: cartoons, error: cartErr } = await window.supabaseClient
       .from("films_site")
       .select("id, title, poster, type")
       .eq("type", "Мультсеріал");
@@ -588,12 +591,13 @@ document.addEventListener("DOMContentLoaded", async () => {
 <script src="seo.js"></script>
 
 
-<script src="/pull-refresh.js"></script>
+<!-- <script src="/pull-refresh.js"></script> -->
 
 
 
 </body>
 </html>
+
 
 
 
