--- a/film.html
+++ b/film.html
@@ -621,7 +621,8 @@
   <script>
     const supabaseUrl = "https://zerlqvbmqszomlondlte.supabase.co";
     const supabaseKey = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InplcmxxdmJtcXN6b21sb25kbHRlIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTUzMzg3NzQsImV4cCI6MjA3MDkxNDc3NH0.8wUBYIeQRC6KVp6vdzv0oqofIf4PeZyzbV5GcD0vxTE";
-    const supabase = window.supabase.createClient(supabaseUrl, supabaseKey);
+    window.supabaseClient =
+      window.supabaseClient || window.supabase.createClient(supabaseUrl, supabaseKey);
 
     let hls = null;                   // поточний Hls-інстанс (щоб коректно руйнувати)
     let currentSource = "movie";      // 'movie' або 'trailer'
