--- a/film.html
+++ b/film.html
@@ -13,6 +13,7 @@
 
   <!-- iOS підтримка -->
   <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <link rel="apple-touch-icon" href="/icon-512.png">
   <link rel="apple-touch-icon" sizes="180x180" href="/icon-512.png">
@@ -623,7 +624,8 @@
     const supabaseKey = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InplcmxxdmJtcXN6b21sb25kbHRlIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTUzMzg3NzQsImV4cCI6MjA3MDkxNDc3NH0.8wUBYIeQRC6KVp6vdzv0oqofIf4PeZyzbV5GcD0vxTE";
     window.supabaseClient =
       window.supabaseClient || window.supabase.createClient(supabaseUrl, supabaseKey);
-    const supabase = window.supabaseClient;
+    
+    const sb = window.supabaseClient;
 
     let hls = null;                   // поточний Hls-інстанс (щоб коректно руйнувати)
     let currentSource = "movie";      // 'movie' або 'trailer'
@@ -858,19 +860,19 @@ function getYouTubeId(url) {
     if (idParam) {
       // Якщо id є в URL — беремо конкретний запис
       const idNum = isNaN(Number(idParam)) ? idParam : Number(idParam);
-      ({ data, error } = await supabase
-        .from("films_site")
-        .select("*")
-        .eq("id", idNum)
-        .single());
+          ({ data, error } = await sb
+      .from("films_site")
+      .select("*")
+      .eq("id", idNum)
+      .single());
     } else {
       // Fallback: якщо id НЕ передали — беремо останній запис (де є title)
-      ({ data, error } = await supabase
-        .from("films_site")
-        .select("*")
-        .order("id", { ascending: false })
-        .limit(1)
-        .maybeSingle());
+      ({ data, error } = await sb
+      .from("films_site")
+      .select("*")
+      .order("id", { ascending: false })
+      .limit(1)
+      .maybeSingle());
     }
   } catch (e) {
     console.error("❌ Виняток Supabase:", e);
@@ -1215,7 +1217,7 @@ async function loadRecommendedFilms(title, genre) {
   }
 
   // 🔎 1️⃣ Основний пошук по назві
-  let { data, error } = await supabase
+  let { data, error } = await sb
     .from("films_site")
     .select("id,title,poster,genre")
     .or(`title.ilike.%${baseWord}%,title.ilike.%${translitWord}%`)
@@ -1223,7 +1225,7 @@ async function loadRecommendedFilms(title, genre) {
 
   // 🔄 2️⃣ Якщо порожньо — шукаємо за жанром
   if ((!data || data.length === 0) && cleanGenre) {
-    ({ data, error } = await supabase
+    ({ data, error } = await sb
       .from("films_site")
       .select("id,title,poster,genre")
       .ilike("genre", `%${cleanGenre}%`)
@@ -1258,7 +1260,7 @@ async function loadRecommendedFilms(title, genre) {
   // 📦 Якщо мало результатів — дозаповнимо випадковими того ж жанру
   let selected = unique.slice(0, 6);
   if (selected.length < 3 && cleanGenre) {
-    const { data: extra } = await supabase
+    const { data: extra } = await sb
       .from("films_site")
       .select("id,title,poster,genre")
       .ilike("genre", `%${cleanGenre}%`)
@@ -1368,7 +1370,7 @@ async function loadRecommendedFilms(title, genre) {
       status: "new",
     };
 
-    const { error } = await supabase.from("feedback_reports").insert(payload);
+    const { error } = await window.supabaseClient.from("feedback_reports").insert(payload);
     if (error) {
       console.error(error);
       alert("Помилка під час відправки. Спробуйте ще раз.");
@@ -1389,7 +1391,7 @@ async function loadRecommendedFilms(title, genre) {
 
 
 <!-- Підключення логіки коментарів -->
-<script src="comments.js?v=2"></script>
+<script src="comments.js?v=3"></script>
 
   
 <script src="auth.js"></script>
