--- a/multseries.html
+++ b/multseries.html
@@ -566,6 +566,12 @@ document.addEventListener("DOMContentLoaded", () => {
   const supabaseKey = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InplcmxxdmJtcXN6b21sb25kbHRlIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTUzMzg3NzQsImV4cCI6MjA3MDkxNDc3NH0.8wUBYIeQRC6KVp6vdzv0oqofIf4PeZyzbV5GcD0vxTE";
   const supabase = window.supabase.createClient(supabaseUrl, supabaseKey);
 
+  // === Supabase
+  const supabaseUrl = "https://zerlqvbmqszomlondlte.supabase.co";
+  const supabaseKey = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InplcmxxdmJtcXN6b21sb25kbHRlIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTUzMzg3NzQsImV4cCI6MjA3MDkxNDc3NH0.8wUBYIeQRC6KVp6vdzv0oqofIf4PeZyzbV5GcD0vxTE";
+  
+  window.supabaseClient = window.supabaseClient || window.supabase.createClient(supabaseUrl, supabaseKey);
+
   const urlParams = new URLSearchParams(window.location.search);
   const seriesTitle = decodeURIComponent(urlParams.get("title") || "");
 
@@ -994,7 +1000,7 @@ document.addEventListener("DOMContentLoaded", async () => {
       status: "new"
     };
 
-    const { error } = await supabase.from("feedback_reports").insert(payload);
+    const { error } = await window.supabaseClient.from("feedback_reports").insert(payload);
     if (error) { console.error(error); alert("Помилка під час відправки. Спробуйте ще раз."); return; }
 
     modal.style.display="none"; txt.value="";
@@ -1088,8 +1094,6 @@ async function loadRecommendedCartoons(title, genre) {
 <!-- <script src="/sw-register.js"></script> -->
 <script src="seo.js"></script>
 
-<script src="seo.js"></script>
-
 <script>
 // 🧩 Відновлення стану після повернення з PWA
 window.addEventListener("pageshow", (e) => {
@@ -1108,7 +1112,7 @@ window.addEventListener("pageshow", (e) => {
   }
 });
 </script>
-<script src="/pull-refresh.js"></script>
+
 </body>
 </html>
 
