--- a/category.html
+++ b/category.html
@@ -193,8 +193,7 @@
   <div id="header-placeholder"></div>
   <script src="header.js"></script>
 
-  <!-- Хедер -->
-  <div id="header-placeholder"></div>
+ 
   <script>
   // 🟢 Функція, яка активує пошук після вставки хедера
   function bindHeaderSearch() {
@@ -247,10 +246,14 @@
 <script>
   // ✅ якщо сторінка відкрилась як /category (без .html) — перенаправляємо
 
-  const supabaseUrl = "https://zerlqvbmqszomlondlte.supabase.co";
-  const supabaseKey = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InplcmxxdmJtcXN6b21sb25kbHRlIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTUzMzg3NzQsImV4cCI6MjA3MDkxNDc3NH0.8wUBYIeQRC6KVp6vdzv0oqofIf4PeZyzbV5GcD0vxTE";
-  const supabase = window.supabase.createClient(supabaseUrl, supabaseKey);
-  console.log("✅ Supabase підключено");
+  // ✅ Supabase (без дублювань)
+window.supabaseClient = window.supabaseClient || window.supabase.createClient(
+  "https://zerlqvbmqszomlondlte.supabase.co",
+  "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InplcmxxdmJtcXN6b21sb25kbHRlIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTUzMzg3NzQsImV4cCI6MjA3MDkxNDc3NH0.8wUBYIeQRC6KVp6vdzv0oqofIf4PeZyzbV5GcD0vxTE"
+);
+
+const supabase = window.supabaseClient; // щоб твій код нижче працював без правок
+console.log("✅ Supabase підключено");
 
   const params = new URLSearchParams(window.location.search);
   const type = (params.get("type") || "Фільм").trim();
@@ -486,10 +489,10 @@ initCategoryPage();
     });
 </script> <!-- 🟢 ось цього закриваючого тегу не вистачало! -->
 
-<script src="/sw-register.js"></script> <!-- ✅ Service Worker -->
+
 <script src="seo.js"></script>
-<script src="/pull-refresh.js"></script>
-</body>
+
+
 
 </body>
 </html>
