--- a/category.html
+++ b/category.html
@@ -16,7 +16,8 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <link rel="apple-touch-icon" href="/icon-512.png">
   <link rel="apple-touch-icon" sizes="180x180" href="/icon-512.png">
-
+const supabaseUrl
+  
   <title>Relax Kino — Категорія</title>
   <link rel="stylesheet" href="style.css" />
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
@@ -220,13 +221,7 @@
 <script>
   // ✅ якщо сторінка відкрилась як /category (без .html) — перенаправляємо
 
-  // ✅ Supabase (без дублювань)
-window.supabaseClient = window.supabaseClient || window.supabase.createClient(
-  "https://zerlqvbmqszomlondlte.supabase.co",
-  "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InplcmxxdmJtcXN6b21sb25kbHRlIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTUzMzg3NzQsImV4cCI6MjA3MDkxNDc3NH0.8wUBYIeQRC6KVp6vdzv0oqofIf4PeZyzbV5GcD0vxTE"
-);
 
-const supabase = window.supabaseClient; // щоб твій код нижче не переписувати
 console.log("✅ Supabase підключено");
 
   const params = new URLSearchParams(window.location.search);
@@ -249,7 +244,7 @@ const yearSelect = document.getElementById('yearSelect');
 async function loadFilms(sortMode = currentSort) {
   currentSort = sortMode;
 
-  let query = supabase.from("films_site").select("*");
+  let query = window.supabaseClient.from("films_site").select("*");
   if (type)  query = query.eq("type", type); // точний тип
   if (genre) query = query.ilike("genre", `%${genre}%`);
 
