--- a/series.html
+++ b/series.html
@@ -681,6 +681,7 @@ playerEl.addEventListener("timeupdate", () => {
 
 <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+<script src="supabase-client.js"></script>
 <script>
   // === Supabase
   const supabaseUrl = "https://zerlqvbmqszomlondlte.supabase.co";
