Refactor Supabase client integration
Updated Supabase client initialization and usage to use window.supabaseClient.

--- a/series.html
+++ b/series.html
@@ -684,9 +684,7 @@ playerEl.addEventListener("timeupdate", () => {
 <script src="supabase-client.js"></script>
 <script>
   // === Supabase
-  const supabaseUrl = "https://zerlqvbmqszomlondlte.supabase.co";
-  const supabaseKey = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InplcmxxdmJtcXN6b21sb25kbHRlIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTUzMzg3NzQsImV4cCI6MjA3MDkxNDc3NH0.8wUBYIeQRC6KVp6vdzv0oqofIf4PeZyzbV5GcD0vxTE";
-  const supabase = window.supabase.createClient(supabaseUrl, supabaseKey);
+  
 
   const urlParams = new URLSearchParams(window.location.search);
   const seriesTitle = decodeURIComponent(urlParams.get("title") || "");
@@ -1364,7 +1362,7 @@ document.addEventListener("DOMContentLoaded", async () => {
       status: "new"
     };
 
-    const { error } = await supabase.from("feedback_reports").insert(payload);
+    const { error } = await window.supabaseClient.from("feedback_reports").insert(payload);
     if (error) { console.error(error); alert("Помилка під час відправки. Спробуйте ще раз."); return; }
 
     modal.style.display="none"; txt.value="";
