--- a/new.html
+++ b/new.html
@@ -3,16 +3,17 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- ✅ Іконки сайту для всіх пристроїв -->
+
+  <!-- ✅ PWA / icons -->
   <link rel="manifest" href="/manifest.json">
   <meta name="theme-color" content="#00fff2">
 
-  <!-- Android favicon / PWA icons -->
   <link rel="icon" type="image/png" sizes="192x192" href="/icon-192.png">
   <link rel="icon" type="image/png" sizes="512x512" href="/icon-512.png">
 
-  <!-- iOS підтримка -->
+  <!-- iOS / Android -->
   <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <link rel="apple-touch-icon" href="/icon-512.png">
   <link rel="apple-touch-icon" sizes="180x180" href="/icon-512.png">
@@ -22,7 +23,6 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
 
   <style>
-    /* Робимо картки компактнішими */
     .film-grid {
       display: grid;
       grid-template-columns: repeat(auto-fill, minmax(140px, 1fr));
@@ -59,232 +59,196 @@
       text-align: center;
       padding-bottom: 8px;
     }
-    /* === 🌟 Стиль заголовка сторінки "Новинки" === */
-.page-title {
-  text-align: center;
-  margin-top: 10px;
-  margin-bottom: 25px;
-  position: relative;
-}
 
-.page-title .emoji {
-  display: block;
-  font-size: 26px;
-  margin-bottom: 6px;
-  animation: pulseStar 2.5s infinite ease-in-out;
-}
-
-.page-title h1 {
-  font-size: 32px;
-  font-weight: 600;
-  letter-spacing: 1px;
-  background: linear-gradient(90deg, #00fff2, #7b2fff);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  text-shadow: 0 0 12px rgba(0,255,255,0.3);
-  margin: 0;
-}
-
-.page-title h1 span {
-  color: #fff;
-  background: linear-gradient(90deg, #8b00ff, #00fff2);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-}
-
-@keyframes pulseStar {
-  0%,100% { transform: scale(1); opacity: 1; }
-  50% { transform: scale(1.3); opacity: 0.7; }
-}
-
+    .page-title {
+      text-align: center;
+      margin-top: 10px;
+      margin-bottom: 25px;
+      position: relative;
+    }
+    .page-title .emoji {
+      display: block;
+      font-size: 26px;
+      margin-bottom: 6px;
+      animation: pulseStar 2.5s infinite ease-in-out;
+    }
+    .page-title h1 {
+      font-size: 32px;
+      font-weight: 600;
+      letter-spacing: 1px;
+      background: linear-gradient(90deg, #00fff2, #7b2fff);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      text-shadow: 0 0 12px rgba(0,255,255,0.3);
+      margin: 0;
+    }
+    .page-title h1 span {
+      background: linear-gradient(90deg, #8b00ff, #00fff2);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+    }
+    @keyframes pulseStar {
+      0%,100% { transform: scale(1); opacity: 1; }
+      50% { transform: scale(1.3); opacity: 0.7; }
+    }
   </style>
 </head>
 
 <body>
-<div id="header-placeholder"></div>
-<script src="header.js"></script>
-
-  <!-- === HEADER === -->
+  <!-- ✅ Header (ОДИН раз) -->
   <div id="header-placeholder"></div>
-  <div id="header-placeholder"></div>
-<script>
-  // 🟢 Функція для активації пошуку після вставки хедера
-  function bindHeaderSearch() {
-    const input = document.getElementById("search-input");
-    if (!input) return;
+  <script src="header.js"></script>
 
-    input.addEventListener("keydown", (e) => {
-      if (e.key === "Enter") {
-        e.preventDefault();
-        const query = input.value.trim();
-        if (query.length > 1) {
-          localStorage.setItem("searchQuery", query);
-          window.location.href = "/search.html";
-        }
-      }
-    });
-  }
-
-  // 🟢 Завантажуємо header.html і активуємо пошук після вставки
-  fetch("header.html")
-    .then(res => res.text())
-    .then(html => {
-      document.getElementById("header-placeholder").innerHTML = html;
-      bindHeaderSearch(); // активуємо пошук
-    })
-    .catch(err => console.error("Помилка хедера:", err));
-</script>
-
-
-  <!-- === MAIN === -->
   <main class="container" style="padding: 20px;">
     <div class="page-title">
       <span class="emoji">🌟</span>
       <h1>Новинки&nbsp;<span>2024–2025</span></h1>
     </div>
+
     <div id="new-films" class="film-grid" style="margin-top:20px;"></div>
     <div id="pagination" style="text-align:center;margin-top:25px;"></div>
   </main>
 
-  <!-- === FOOTER === -->
   <footer>© 2025 KinoSite • Усі права захищені</footer>
 
-  <!-- === SUPABASE === -->
+  <!-- ✅ Supabase (один раз) -->
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+  <script src="supabase-client.js"></script>
+
   <script>
-    const supabaseUrl = "https://zerlqvbmqszomlondlte.supabase.co";
-    const supabaseKey = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InplcmxxdmJtcXN6b21sb25kbHRlIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTUzMzg3NzQsImV4cCI6MjA3MDkxNDc3NH0.8wUBYIeQRC6KVp6vdzv0oqofIf4PeZyzbV5GcD0vxTE";
-    const supabase = window.supabase.createClient(supabaseUrl, supabaseKey);
-
     async function loadNewItems(page = 1) {
-  const box = document.getElementById("new-films");
-  const pagination = document.getElementById("pagination");
-  box.innerHTML = "<p style='color:#aaa;'>Завантаження...</p>";
-  pagination.innerHTML = "";
+      const box = document.getElementById("new-films");
+      const pagination = document.getElementById("pagination");
+      box.innerHTML = "<p style='color:#aaa;'>Завантаження...</p>";
+      pagination.innerHTML = "";
 
-  // 🧩 Кількість фільмів на сторінці
-  const perPage = 42;
+      // 🧩 Кількість на сторінці
+      const perPage = 42;
 
-  const { data, error } = await supabase
-    .from("films_site")
-    .select("id, title, poster, year, genre, type, imdb, pro_access")
-    .in("type", ["Фільм", "Серіал", "Мультфільм", "Мультсеріал"])
-    .gte("year", 2024)
-    .order("id", { ascending: false });
-
-  if (error) {
-    console.error("❌ Помилка:", error);
-    box.innerHTML = "<p style='color:#aaa;'>Помилка завантаження.</p>";
-    return;
-  }
-
-  if (!data?.length) {
-    box.innerHTML = "<p style='color:#aaa;'>Поки що немає нових фільмів чи серіалів.</p>";
-    return;
-  }
-
-  // 🔹 Унікальні фільми по назві
-  const map = new Map();
-  data.forEach(item => {
-    const key = item.title.trim();
-    if (!map.has(key)) map.set(key, item);
-  });
-  const unique = Array.from(map.values());
-
-  // 📄 Розрахунок сторінок
-  const totalPages = Math.ceil(unique.length / perPage);
-  const start = (page - 1) * perPage;
-  const end = start + perPage;
-  const items = unique.slice(start, end);
-
-  // 🧱 Малюємо картки
-  box.innerHTML = "";
-  items.forEach(item => {
-    const card = document.createElement("div");
-    card.className = "film";
-    card.innerHTML = `
-      <div class="poster">
-        <img src="${item.poster || 'https://via.placeholder.com/200x300?text=No+Image'}" alt="${item.title}">
-        ${String(item.pro_access || '').toUpperCase() === 'PRO' ? '<span class="badge plus">PRO</span>' : ''}
-      </div>
-      <div class="title">${item.title}</div>
-      <div class="meta">
-        <span>${item.type || ''}</span> • 
-        <span>${item.genre || ''}</span> • 
-        <span>${item.year || ''}</span>
-      </div>
-    `;
-    card.addEventListener("click", () => {
-      if (item.type === "Серіал") {
-        window.location.href = "series.html?title=" + encodeURIComponent(item.title);
-      } else if (item.type === "Мультсеріал") {
-        window.location.href = "multseries.html?title=" + encodeURIComponent(item.title);
-      } else {
-        window.location.href = "film.html?id=" + item.id;
+      if (!window.supabaseClient) {
+        console.error("❌ supabaseClient не ініціалізований");
+        box.innerHTML = "<p style='color:#aaa;'>Помилка: supabaseClient не готовий.</p>";
+        return;
       }
-    });
-    box.appendChild(card);
-  });
 
-  // 🔢 Малюємо пагінацію
-  pagination.innerHTML = "";
+      const { data, error } = await window.supabaseClient
+        .from("films_site")
+        .select("id, title, poster, year, genre, type, imdb, pro_access")
+        .in("type", ["Фільм", "Серіал", "Мультфільм", "Мультсеріал"])
+        .gte("year", 2024)
+        .order("id", { ascending: false });
 
-  const createPageButton = (label, newPage, disabled = false, active = false) => {
-    const btn = document.createElement("button");
-    btn.textContent = label;
-    btn.style.cssText = `
-      background:${active ? '#00fff2' : 'transparent'};
-      color:${active ? '#000' : '#00fff2'};
-      border:1px solid rgba(0,255,255,0.4);
-      border-radius:6px;
-      margin:0 4px;
-      padding:5px 10px;
-      cursor:${disabled ? 'default' : 'pointer'};
-      font-weight:600;
-    `;
-    if (!disabled && !active) btn.onclick = () => loadNewItems(newPage);
-    pagination.appendChild(btn);
-  };
+      if (error) {
+        console.error("❌ Помилка:", error);
+        box.innerHTML = "<p style='color:#aaa;'>Помилка завантаження.</p>";
+        return;
+      }
 
-  // ⬅️ Стрілка "Назад"
-  createPageButton("⬅", page - 1, page === 1);
+      if (!data?.length) {
+        box.innerHTML = "<p style='color:#aaa;'>Поки що немає нових фільмів чи серіалів.</p>";
+        return;
+      }
 
-  // 🔹 Номери сторінок
-  for (let i = 1; i <= totalPages; i++) {
-    if (i === 1 || i === totalPages || Math.abs(page - i) <= 2) {
-      createPageButton(i, i, false, i === page);
-    } else if (Math.abs(page - i) === 3) {
-      const dots = document.createElement("span");
-      dots.textContent = "...";
-      dots.style.color = "#999";
-      pagination.appendChild(dots);
+      // 🔹 Унікальні по назві (щоб не дублювались сезони/серії)
+      const map = new Map();
+      data.forEach(item => {
+        const key = (item.title || "").trim().toLowerCase();
+        if (key && !map.has(key)) map.set(key, item);
+      });
+      const unique = Array.from(map.values());
+
+      // 📄 сторінки
+      const totalPages = Math.ceil(unique.length / perPage);
+      const start = (page - 1) * perPage;
+      const end = start + perPage;
+      const items = unique.slice(start, end);
+
+      // 🧱 картки
+      box.innerHTML = "";
+      items.forEach(item => {
+        const card = document.createElement("div");
+        card.className = "film";
+        card.innerHTML = `
+          <div class="poster">
+            <img src="${item.poster || 'https://via.placeholder.com/200x300?text=No+Image'}" alt="${item.title}">
+            ${String(item.pro_access || '').toUpperCase() === 'PRO' ? '<span class="badge plus">PRO</span>' : ''}
+          </div>
+          <div class="title">${item.title || ''}</div>
+          <div class="meta">
+            <span>${item.type || ''}</span> •
+            <span>${item.genre || ''}</span> •
+            <span>${item.year || ''}</span>
+          </div>
+        `;
+        card.addEventListener("click", () => {
+          if (item.type === "Серіал") {
+            window.location.href = "series.html?title=" + encodeURIComponent(item.title);
+          } else if (item.type === "Мультсеріал") {
+            window.location.href = "multseries.html?title=" + encodeURIComponent(item.title);
+          } else {
+            window.location.href = "film.html?id=" + item.id;
+          }
+        });
+        box.appendChild(card);
+      });
+
+      // 🔢 пагінація
+      const createPageButton = (label, newPage, disabled = false, active = false) => {
+        const btn = document.createElement("button");
+        btn.textContent = label;
+        btn.style.cssText = `
+          background:${active ? '#00fff2' : 'transparent'};
+          color:${active ? '#000' : '#00fff2'};
+          border:1px solid rgba(0,255,255,0.4);
+          border-radius:6px;
+          margin:0 4px;
+          padding:5px 10px;
+          cursor:${disabled ? 'default' : 'pointer'};
+          font-weight:600;
+        `;
+        if (disabled) btn.disabled = true;
+        if (!disabled && !active) btn.onclick = () => loadNewItems(newPage);
+        pagination.appendChild(btn);
+      };
+
+      createPageButton("⬅", page - 1, page === 1);
+
+      for (let i = 1; i <= totalPages; i++) {
+        if (i === 1 || i === totalPages || Math.abs(page - i) <= 2) {
+          createPageButton(i, i, false, i === page);
+        } else if (Math.abs(page - i) === 3) {
+          const dots = document.createElement("span");
+          dots.textContent = "...";
+          dots.style.color = "#999";
+          dots.style.margin = "0 4px";
+          pagination.appendChild(dots);
+        }
+      }
+
+      createPageButton("➡", page + 1, page === totalPages);
     }
-  }
 
-  // ➡️ Стрілка "Вперед"
-  createPageButton("➡", page + 1, page === totalPages);
-}
-
-document.addEventListener("DOMContentLoaded", () => loadNewItems(1));
-
+    document.addEventListener("DOMContentLoaded", () => loadNewItems(1));
   </script>
 
   <script src="auth.js"></script>
-<div id="footer-placeholder"></div>
-<script>
-  fetch("footer.html")
-    .then(res => res.text())
-    .then(html => {
-      document.getElementById("footer-placeholder").innerHTML = html;
-      // після того як футер з’явився у DOM — підключаємо логіку
-      const s = document.createElement("script");
-      s.src = "footer.js";
-      document.body.appendChild(s);
-    });
-</script>
-<script src="/sw-register.js"></script> <!-- ✅ Service Worker -->
-<script src="seo.js"></script>
-<script src="/pull-refresh.js"></script>
 
+  <div id="footer-placeholder"></div>
+  <script>
+    fetch("footer.html")
+      .then(res => res.text())
+      .then(html => {
+        document.getElementById("footer-placeholder").innerHTML = html;
+        const s = document.createElement("script");
+        s.src = "footer.js";
+        document.body.appendChild(s);
+      });
+  </script>
+
+  <!-- ❌ ці два зараз дають 404/html — тримаємо вимкненими -->
+  <!-- <script src="/sw-register.js"></script> -->
+  <!-- <script src="/pull-refresh.js"></script> -->
+
+  <script src="seo.js"></script>
 </body>
 </html>
